@startuml

class MapsActivity {
  - mapApplication: MapApplicationService
  - mapCallback: MapCallback

  + {abstract} onCreate()
}

package application {
  class MapApplicationService {
    - myMap: MyMap

    + startUp(mMap: GoogleMap)
  }
}

package ui {
  class MapCallback {
    + onMapReady(googleMap: GoogleMap)
    + onMarkerClick(p0: Marker)
  }
}

package domain {
    package model {
      class GPS {
        - activity: AppCompatActivity
        - lastLocation: Location
        - fusedLocationClient: FusedLocationProviderClient

        + enableCurrentLocation(mMap: GoogleMap)
        - checkPermission()
      }

    class MyMap {
      + mMap: GoogleMap
    }
  }
}

MapsActivity *-- MapApplicationService
MapsActivity *-- MapCallback
MapCallback o-- MapApplicationService

MapApplicationService o-- GPS
MapApplicationService o-- MyMap


@enduml